# wulfram2-server

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  DEBUGCONSOLE.md  PROGRESS.md  build.ps1  lint.ps1
.githooks/: pre-commit  pre-push
config/: headless.toml
docs/: quality-gate.md
docs/superpowers/notes/: 2026-06-16-m0-m2-smoke.md  2026-06-16-m3-head-chop-discovery.md  2026-06-16-m3-headless-boot.md  implementation-notes.md
docs/superpowers/plans/: 2026-06-15-headless-wulfram-server-m0-m2.md  2026-06-16-headless-wulfram-server-m3-head-chop.md  2026-06-16-headless-wulfram-server-m4-loop-hijack.md  2026-06-16-headless-wulfram-server-m5-m6-authoritative.md  2026-06-17-m6.2-min-b-drive-non-local-tank.md  2026-06-17-m6.3-update-array-udp-relay.md  2026-06-17-m6.4-action-input-routing.md
docs/superpowers/specs/: 2026-06-15-headless-wulfram-server-design.md
include/wfh/: binary_manifest.hpp  config.hpp  engine_abi.hpp  init.hpp  injector.hpp  log.hpp  pe_validate.hpp  ready_event.hpp
include/wfh/proto/: bitstream.hpp  framing.hpp  opcodes.hpp  validate.hpp
include/wfh/server/: acceptor.hpp  action_input.hpp  bringup_packets.hpp  connection.hpp  dev_console.hpp  entity_snapshot.hpp  queues.hpp  runtime.hpp  server_config.hpp  tick_guard.hpp  world_host.hpp  world_packets.hpp
src/common/: pe_validate.cpp
src/dll/: dllmain.cpp  init.cpp
src/dll/hooks/: engine_hooks.cpp  engine_hooks.hpp  head_stubs.cpp  head_stubs.hpp
src/dll/server/: dev_engine.cpp  dev_engine.hpp  engine_thunks.cpp  engine_thunks.hpp  tick_guard.cpp  world_host_engine.cpp  world_host_engine.hpp
src/dll/server/net/: acceptor.cpp  action_input.cpp  bringup_packets.cpp  connection.cpp  dev_console.cpp  entity_snapshot.cpp  runtime.cpp  server_config.cpp  world_host.cpp  world_packets.cpp
src/dll/server/proto/: bitstream.cpp  framing.cpp  validate.cpp
src/loader/: injector.cpp  loader_args.cpp  main.cpp
src/log/: log.cpp
tests/: test_entity_snapshot.cpp  test_gen_addresses.py  test_main.cpp  test_proto.cpp  test_server_net.cpp  test_server_tick.cpp  test_world_host.cpp
tools/: dev_poke.py  drive_probe.py  feed_onjoin_probe.py
tools/captures/: action_packets_2026-06-17.txt
